--- a/authenticate-me/frontend/src/components/Navigation/Navigation.css
+++ b/authenticate-me/frontend/src/components/Navigation/Navigation.css
@@ -10,14 +10,13 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* z-index: 5; */
 
-  /* Genius has this as a separate navBar with tons of features that I'm not going to implement */
   border-bottom: 41px solid rgb(18, 18, 18);
-
-  font-family: inherit;
 }
 
+.form_bottom {
+  border-bottom: 41px solid black
+}
 
 nav ul {
   width: 100%;
