--- a/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
+++ b/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
@@ -104,6 +104,11 @@
 
 .highlight {
   background-color: #dddddd;
+  padding: 3.6px 0;
+}
+.highlight-yellow {
+  background-color: pink;
+  padding: 3px 0px 3px 0px;
 }
 
 
