--- a/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
+++ b/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
@@ -80,9 +80,29 @@
   margin: 0 auto;
 
   background-color: white;
+
+  display: flex;
 }
 
 .track_lyric_wrapper {
+  font-family: 'Programme Light';
+  box-sizing: border-box;
+
+  white-space: pre-wrap;
+
+  font-size: 1.15em;
+  line-height: 1.7em;
+
+  width: 135%;
+  min-height: 100vh;
+  margin: 0 auto;
+
+  background-color: white;
+
+  padding: 15px;
+}
+
+.track_anno_wrapper {
   font-family: 'Programme Light';
   box-sizing: border-box;
 
@@ -104,7 +124,11 @@
 
 .highlight {
   background-color: #dddddd;
-  padding: 3.6px 0;
+  padding: 4px 0;
+}
+.highlight:hover{
+  background-color:  #ffff64;
+  cursor: pointer;
 }
 .highlight-yellow {
   background-color: pink;
