--- a/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
+++ b/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
@@ -84,6 +84,8 @@
   display: flex;
 
   height: auto;
+
+  overflow-y: hidden;
 }
 
 .track_lyric_wrapper {
@@ -110,11 +112,9 @@
 
   white-space: pre-wrap;
 
-  font-size: 1.15em;
-  line-height: 1.7em;
-
   width: 970px;
   height: fit-content;
+  max-height: 500px;
   margin: 0 auto;
 
   background-color: white;
@@ -122,7 +122,52 @@
   padding: 15px;
 
   position: relative;
-  top: 0
+  top: 0;
+  right: -1000px;
+
+  display: flex;
+}
+.display {
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  right: 0px !important;
+}
+
+.annotation {
+  display: flex;
+  flex-direction: column;
+
+  font-size: 1em;
+  padding-top: 20px;
+  line-height: 1.5em;
+}
+.annotation_header {
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+
+.anno_arrow_wrapper {
+  overflow-y: hidden;
+  height: 100vh;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: flex-start;
+
+  width: 50px;
+}
+.anno_arrow {
+  position: relative;
+  top: 0px;
+  width: 40px;
+  height: 2000px;
+}
+.annotation {
+  display: flex;
+  justify-content: flex-start;
+  width: 80%;
 }
 
 
