clicking on an annotation sets makes it look active

--- a/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
+++ b/authenticate-me/frontend/src/components/TrackPage/TrackPage.css
@@ -180,6 +180,9 @@
   background-color:  #ffff64;
   cursor: pointer;
 }
+.active {
+  background-color:  #ffff64;
+}
 .highlight-yellow {
   background-color: pink;
   padding: 3px 0px 3px 0px;
